--- a/index.html
+++ b/index.html
@@ -1,8 +1,72 @@
-<head>
-  <title>
-    Clockwork
-  </title>
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html> <head>
+<title></title>
 </head>
+
 <body>
-  <h1>Clockwork, an app for your phone</h1>
-</body>
+<h1>Guidelines for Project Web Sites</h1>
+<ul>
+  <li>a web hosting site that lasts at least 2 years
+  <li>provide all the entries for this semester in the template below, 
+    including due dates and document placeholders for milestones
+  <li>submit the URL (link) via Canvas by 12noon on the date the Project Plan is due
+</ul>
+<p>
+<hr>
+<p>
+<center>
+      <TABLE border=1><TBODY>
+	<TR align=center>
+          <TD>Project Name</TD>
+          <TD>...</TD>
+	<TR align=center>
+          <TD>Team Members and Email Addresses</TD>
+          <TD>...</TD>
+	<TR align=center>
+          <TD>Faculty Advisor</TD>
+          <TD>...</TD></TR>
+      </TBODY></TABLE>
+</center>
+<p>
+<center>
+<h3>First Semester</h3>
+      <TABLE border=1><TBODY>
+	<TR align=center>
+          <TD>Plan (Jan 27)</TD>
+          <TD><a href="plan1.pdf">Plan</a>, <a href="plan1Pres.pdf">Presentation</a></TD>
+	<TR align=center>
+          <TD>Milestone 1 (Feb 24)</TD>
+          <TD><a href="requirement.pdf">Requirement</a>, <a href="design.pdf">Design</a>, <a href="test.pdf">Test</a>, <a href="milestone1.pdf">Presentation</a>, <a href="eval1.pdf">Progress Evaluation</a></TD>
+	<TR align=center>
+          <TD>Milestone 2 (Mar 26)</TD>
+          <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval2.pdf">Progress Evaluation</a></TD></TR>
+	<TR align=center>
+          <TD>Milestone 3 (Apr 21)</TD>
+          <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval3.pdf">Progress Evaluation</a></TD></TR>
+      </TBODY></TABLE>
+</center>
+
+<center>
+
+<h3>Second Semester</h3>
+
+      <TABLE border=1><TBODY>
+	<TR align=center>
+          <TD>Plan (Jan 27)</TD>
+          <TD><a href="plan2.pdf">Plan</a>, <a href="plan2Pres.pdf">Presentation</a></TD>
+	<TR align=center>
+          <TD>Milestone 4 (Feb 24)</TD>
+          <TD><a href="milestone4.pdf">Presentation</a>, <a href="eval4.pdf">Progress Evaluation</a></TD>
+	<TR align=center>
+          <TD>Milestone 5 (Mar 26)</TD>
+          <TD><a href="poster.pdf">Poster</a>, <a href="milestone5.pdf">Presentation</a>, <a href="eval5.pdf">Progress Evaluation</a></TD></TR>
+	<TR align=center>
+          <TD>Milestone 6 (Apr 21)</TD>
+          <TD><a href="userManual.pdf">User and/or Developer Manual</a>, <a href="demoVideo.jpg">Demo Video</a>, <a href="milestone6.pdf">Presentation</a>, <a href="eval6.pdf">Progress Evaluation</a></TD></TR>
+      </TBODY></TABLE>
+</center>
+
+<p>
+<hr>
+<address><a href="http://www.cs.fit.edu/~pkc/">Philip Chan</a></address>
+</body> </html>
