very basic information added

--- a/index.html
+++ b/index.html
@@ -4,27 +4,22 @@
 </head>
 
 <body>
-<h1>Guidelines for Project Web Sites</h1>
-<ul>
-  <li>a web hosting site that lasts at least 2 years
-  <li>provide all the entries for this semester in the template below, 
-    including due dates and document placeholders for milestones
-  <li>submit the URL (link) via Canvas by 12noon on the date the Project Plan is due
-</ul>
-<p>
-<hr>
-<p>
+<h1>ClockWork Time Estimation Application</h1>
 <center>
       <TABLE border=1><TBODY>
 	<TR align=center>
           <TD>Project Name</TD>
-          <TD>...</TD>
+          <TD>ClockWork</TD>
 	<TR align=center>
           <TD>Team Members and Email Addresses</TD>
-          <TD>...</TD>
+          <TD align="left">
+            Anthony Menendez <a href= "mailto:amenendezmen2022@my.fit.edu">amenendezmen2022@my.fit.edu</a><br>
+            Christian Ott <a href= "mailto:cott2020@my.fit.edu">cott2020@my.fit.edu</a><br>
+            Peter Stelzer <a href= "mailto:pstelzer2023@my.fit.edu">pstelzer2023@my.fit.edu</a><br>
+            Pierson Hendricks <a href= "mailto:phendricks2023@my.fit.edu">phendricks2023@my.fit.edu</a>
 	<TR align=center>
           <TD>Faculty Advisor</TD>
-          <TD>...</TD></TR>
+          <TD>David Luginbuhl <a href = "mailto:dluginbuhl@fit.edu">dluginbuhl@fit.edu</a></TD></TR>
       </TBODY></TABLE>
 </center>
 <p>
