added presentations and made further milestones hidden

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 	<TR align=center>
           <TD>Plan (Jan 27)</TD>
           <TD><a href="plan1.pdf">Plan</a>, <a href="plan1Pres.pdf">Presentation</a></TD>
-	<TR align=center>
+	<TR align=center, style="visibility: hidden;">
           <TD>Milestone 1 (Feb 24)</TD>
           <TD><a href="requirement.pdf">Requirement</a>, <a href="design.pdf">Design</a>, <a href="test.pdf">Test</a>, <a href="milestone1.pdf">Presentation</a>, <a href="eval1.pdf">Progress Evaluation</a></TD>
-	<TR align=center>
+	<TR align=center, style="visibility: hidden;">
           <TD>Milestone 2 (Mar 26)</TD>
           <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval2.pdf">Progress Evaluation</a></TD></TR>
-	<TR align=center>
+	<TR align=center, style="visibility: hidden;">
           <TD>Milestone 3 (Apr 21)</TD>
           <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval3.pdf">Progress Evaluation</a></TD></TR>
       </TBODY></TABLE>
 </center>
 
-<center>
+<center style="visibility: hidden;">
 
 <h3>Second Semester</h3>
 
@@ -60,8 +60,3 @@
           <TD><a href="userManual.pdf">User and/or Developer Manual</a>, <a href="demoVideo.jpg">Demo Video</a>, <a href="milestone6.pdf">Presentation</a>, <a href="eval6.pdf">Progress Evaluation</a></TD></TR>
       </TBODY></TABLE>
 </center>
-
-<p>
-<hr>
-<address><a href="http://www.cs.fit.edu/~pkc/">Philip Chan</a></address>
-</body> </html>
