--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 	<TR align=center>
           <TD>Plan (Jan 27)</TD>
           <TD><a href="plan1.pdf">Plan</a>, <a href="plan1Pres.pdf">Presentation</a></TD>
-	<TR align=center, style="visibility: hidden;">
+	<TR align=center>
           <TD>Milestone 1 (Feb 24)</TD>
           <TD><a href="requirement.pdf">Requirement</a>, <a href="design.pdf">Design</a>, <a href="test.pdf">Test</a>, <a href="milestone1.pdf">Presentation</a>, <a href="eval1.pdf">Progress Evaluation</a></TD>
-	<TR align=center, style="visibility: hidden;">
+	<TR align=center>
           <TD>Milestone 2 (Mar 26)</TD>
           <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval2.pdf">Progress Evaluation</a></TD></TR>
-	<TR align=center, style="visibility: hidden;">
+	<TR align=center>
           <TD>Milestone 3 (Apr 21)</TD>
           <TD><a href="milestone3.pdf">Presentation</a>, <a href="eval3.pdf">Progress Evaluation</a></TD></TR>
       </TBODY></TABLE>
 </center>
 
-<center style="visibility: hidden;">
+<center>
 
 <h3>Second Semester</h3>
 
